--- a/index.html
+++ b/index.html
@@ -9,24 +9,62 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap"
       rel="stylesheet">
+      <link rel="stylesheet" href="style.css">
     <title>Frontend Mentor | Interactive pricing component</title>
   </head>
   <body>
 
-    Simple, traffic-based pricing
-    Sign-up for our 30-day trial. No credit card required.
+    <div class="page">
 
-    Pageviews
-    $ /month
+      <header>
+        <div class="header__title">
+          <h3>
+            Simple, traffic-based pricing
+          </h3>
+        </div>
+        <div class="header__content">
+          <p>
+            Sign-up for our 30-day trial. No credit card required.
+          </p>
+        </div>
+      </header><!-- header -->
 
-    Monthly Billing
-    Yearly Billing 25% discount
+      <main>
+        <div class="card">
+          <div class="card__content">
+            <div class="card__content-title">
+              <h5>
+                Pageviews
+              </h5>
+            </div>
+            <div class="card_content-input">
+              <p>
+                $ /month
+              </p>
+            </div>
+            <div class="card__content-options">
+              <p>
+                Monthly Billing
+                Yearly Billing 25% discount
+              </p>
+            </div>
+          </div>
+          <div class="card__footer">
+            <div class="card__footer-list">
+              <ul>
+                <li>Unlimited websites</li>
+                <li>100% data ownership</li>
+                <li>Email reports</li>
+              </ul>
+            </div>
+            <div class="card__content-button">
+              <button>Start my trial</button>
+            </div>
+          </div>
+        </div>
+      </main><!-- main -->
 
-    Unlimited websites
-    100% data ownership
-    Email reports
-
-    Start my trial
+    </div><!-- .page -->
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge"
